Added support for Java 21, migrated to Jakarta namespace, updated versions of dependencies to latest.